--- a/Model_Building/Random_Forest.ipynb
+++ b/Model_Building/Random_Forest.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 1,
    "id": "a28fd5db",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split \n",
     "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.compose import make_column_transformer,make_column_selector\n",
+    "from sklearn.compose import make_column_transformer, make_column_selector\n",
     "from sklearn.model_selection import StratifiedKFold, GridSearchCV\n",
     "from sklearn.metrics import r2_score\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
@@ -33,19 +33,40 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "47e983ff",
+   "id": "97744bd8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Laoding data\n",
-    "df=pd.read_csv(\"../Dataset/ProcessedFile.csv\")"
+    "# Run this code to fetch data from MongoDB\n",
+    "import pymongo\n",
+    "import pymongoarrow, pymongoarrow.api\n",
+    "\n",
+    "client = pymongo.MongoClient('mongodb://127.0.0.1:27017/')\n",
+    "mydb = client['Project']\n",
+    "collection = mydb.HouseRent\n",
+    "\n",
+    "df = pymongoarrow.api.find_pandas_all(collection, {})\n",
+    "df = df.drop('_id',axis=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "170e7c9e",
+   "id": "47e983ff",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run this code to fetch data from local system\n",
+    "#df=pd.read_csv(\"../Dataset/ProcessedFile.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "170e7c9e",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -191,7 +212,7 @@
        "4   22.592810      10.571573      10.263271  12500  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "af61b038",
    "metadata": {},
    "outputs": [],
@@ -213,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "47abad49",
    "metadata": {},
    "outputs": [],
@@ -227,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "e70c5524",
    "metadata": {},
    "outputs": [],
@@ -239,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "e4921f84",
    "metadata": {},
    "outputs": [],
@@ -250,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b135ee3c",
    "metadata": {},
    "outputs": [],
@@ -260,14 +281,14 @@
     "ct = make_column_transformer((ohc,\n",
     "       make_column_selector(dtype_include=object)),\n",
     "       (\"passthrough\",\n",
-    "        make_column_selector(dtype_include=['int64','float64'])))\n",
+    "        make_column_selector(dtype_include=['int32','int64','float64'])))\n",
     "X_transf_trn = ct.fit_transform(X_train).toarray()\n",
     "X_transf_trn = pd.DataFrame(X_transf_trn, columns=ct.get_feature_names_out())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "5dd4bb5a",
    "metadata": {},
    "outputs": [
@@ -393,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "id": "944a94fe",
    "metadata": {},
    "outputs": [
@@ -409,7 +430,7 @@
        "             scoring='r2')"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "id": "dfb98d1e",
    "metadata": {},
    "outputs": [
@@ -445,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 13,
    "id": "8c09b879",
    "metadata": {},
    "outputs": [
@@ -464,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 14,
    "id": "b30b4b78",
    "metadata": {},
    "outputs": [
@@ -475,7 +496,7 @@
        "       14226.50052725, 40970.        , 19173.277     ])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 15,
    "id": "e9d5900b",
    "metadata": {},
    "outputs": [
@@ -520,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 16,
    "id": "95da8b77",
    "metadata": {},
    "outputs": [],
@@ -531,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 17,
    "id": "c2508de2",
    "metadata": {},
    "outputs": [],
@@ -543,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 18,
    "id": "ff9f93f2",
    "metadata": {},
    "outputs": [],
@@ -555,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 19,
    "id": "9f032d40",
    "metadata": {},
    "outputs": [
@@ -566,7 +587,7 @@
        "       11111.36384834, 37854.86332109, 16058.14032109])"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 20,
    "id": "f300b380",
    "metadata": {},
    "outputs": [
@@ -589,7 +610,7 @@
        "       16364.52061901, 43108.02009176, 21311.29709176])"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 21,
    "id": "89677b69",
    "metadata": {},
    "outputs": [],
@@ -612,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 22,
    "id": "0398434b",
    "metadata": {},
    "outputs": [],
